apps/security/network-policies/manifests/data/valkey.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: valkey-default-deny-ingress
  namespace: data
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: valkey
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: data
            app.kubernetes.io/name: valkey-exporter
        - matchLabels:
            io.kubernetes.pod.namespace: ai
            app.kubernetes.io/name: langfuse
      toPorts:
        - ports:
          - port: "6379"
            protocol: TCP
